--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "argon-module-requirer",
   "displayName": "Argon module requirer (Roblox)",
   "description": "Auto require module for Argon (Roblox)",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "repository": "https://github.com/AzPepoze/Argon-module-requirer",
+  "publisher": "AzPepoze",
+  "icon": "./icon.png",
   "engines": {
     "vscode": "^1.88.0"
   },
